include_directories(${PROJECT_SOURCE_DIR}/Chapter2/)
include_directories(${PROJECT_SOURCE_DIR}/Chapter3/)
include_directories(${PROJECT_SOURCE_DIR}/Chapter5/)
include_directories(${PROJECT_SOURCE_DIR}/Chapter6/)


add_executable(Chapter7_diffuse
	diffuse.cpp)

add_executable(Chapter7_bright_diffuse
	bright_diffuse.cpp)
