include_directories(${PROJECT_SOURCE_DIR}/Chapter2/)
include_directories(${PROJECT_SOURCE_DIR}/Chapter3/)
include_directories(${PROJECT_SOURCE_DIR}/Chapter6/)
include_directories(${PROJECT_SOURCE_DIR}/Chapter8/)


add_executable(Chapter9_dielectrics
	dielectrics.cpp)
add_executable(Chapter9_glass
	glass.cpp)